# truenorth-loanpro-be

./: .gitignore  README.md  lint-fix.sh  manage.py  package-lock.json  package.json  pyproject.toml  serverless.yaml
core/: admin.py  apps.py  pagination.py
core/migrations/: 0001_initial.py  0002_rename_username_user_email.py  0003_rename_email_user_username.py  0004_user_is_staff.py  0005_rename_username_user_email.py  0006_user_is_active.py  0007_remove_user_is_active.py  0008_user_is_active.py  0009_user_is_deleted.py  0010_operation_record.py  0011_alter_operation_type.py  0012_rename_data_record_date.py  0013_rename_operation_id_record_operation_and_more.py
core/models/: __init__.py  base.py  operation.py  record.py  user.py
loanpro_be/: asgi.py  production.py  settings.py  urls.py  wsgi.py
loanpro_be/utils/: storages.py
operation/: commands.py  exceptions.py  operations.py  serializers.py  tests.py
operation/management/commands/: load_default_data.py
record/: exceptions.py  serializers.py  tests.py  urls.py  views.py
user/: serializers.py  tests.py  urls.py  views.py
