[tool.poetry]
name = "loanpro_be"
version = "0.1.0"
description = "Loanpro backend challenge by José Jiménez"
authors = ["José Jiménez <jimenezbjosel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.6"
collectfast = "^2.2.0"
boto3 = "^1.26.114"
werkzeug = "1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
